// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Tip (unit tests) when has a position should match the snapshot 1`] = `
<kv-toggle-tip custom-class="" position="left" text="Toggle tip">
  <!---->
  <div class="toggle-tip-open-element-container">
    <kv-icon name="kv-logo-kelvin" slot="open-element-slot"></kv-icon>
  </div>
  <kv-portal animated="" zindex="9006">
    <kv-tooltip-text class="toggle-tip-container" text="Toggle tip">
      <div></div>
    </kv-tooltip-text>
  </kv-portal>
</kv-toggle-tip>
`;

exports[`Toggle Tip (unit tests) when uses default props should match the snapshot 1`] = `
<kv-toggle-tip custom-class="" text="Toggle tip">
  <!---->
  <div class="toggle-tip-open-element-container">
    <kv-icon name="kv-logo-kelvin" slot="open-element-slot"></kv-icon>
  </div>
  <kv-portal animated="" zindex="9006">
    <kv-tooltip-text class="toggle-tip-container" text="Toggle tip">
      <div></div>
    </kv-tooltip-text>
  </kv-portal>
</kv-toggle-tip>
`;
